# whitehat

./: .gitignore  .gitmodules  .pnp.cjs  Anchor.toml  Cargo.toml  package-lock.json  package.json
.github/actions/: anchor.yml  test.yml
.github/workflows/: main.yml
client/: Cargo.toml
client/src/: main.old  main.rs
client/src/helpers/: config.rs  help.rs  mod.rs  parse_pubkey.rs  string_u8.rs
client/src/ixs/: hack.rs  mod.rs  vulnerability.rs
programs/whitehat/: Cargo.toml
programs/whitehat/src/: errors.rs  lib.rs
programs/whitehat/src/constants/: mod.rs
programs/whitehat/src/contexts/: approve_sol_hack.rs  approve_vulnerability.rs  deposit_sol_hack.rs  initialize.rs  mod.rs  register_protocol.rs  report_vulnerability.rs
programs/whitehat/src/state/: analytics.rs  mod.rs  protocol.rs  sol_hack.rs  vulnerability.rs
tests/: whitehat.ts
utils/idl/: whitehat.ts
whitehat-client/: Cargo.toml
whitehat-client/src/: main.rs
