[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.16.15"
solana-client = "1.16.15"
solana-program = "1.16.15"
ecies-ed25519 = "0.5.1"
bs58 = "0.5.0"
rand = "0.7.3"